--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "form-data": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "openai": "^5.7.0"
   }
 }
