--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.10",
     "openai": "^5.7.0"
   }
 }
